<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/hourly_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@android:color/transparent"/>
    <TextView
        android:id="@+id/hourly_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="end"
        android:layout_weight="1"
        android:text="@string/header_text_time"/>
    <TextView
        android:id="@+id/hourly_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:textStyle="bold"
        android:gravity="end"
        android:textColor="@color/white"
        android:layout_weight="1"
        android:text="@string/header_text_temp"/>
    <TextView
        android:id="@+id/hourly_rain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:textStyle="bold"
        android:gravity="end"
        android:textColor="@color/white"
        android:layout_weight="1"
        android:text="@string/header_text_change_of_rain"/>
    <TextView
        android:id="@+id/hourly_wind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:textStyle="bold"
        android:gravity="end"
        android:textColor="@color/white"
        android:layout_weight="1"
        android:text="@string/header_text_wind_mph"/>
    <TextView
        android:id="@+id/hourly_humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:textStyle="bold"
        android:gravity="end"
        android:textColor="@color/white"
        android:layout_weight="1"
        android:text="@string/header_text_humidity"/>
</LinearLayout>